--- a/index.htm
+++ b/index.htm
@@ -5,8 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Smart Financy</title>
     <script src="script.js"></script>
+    <link rel="stylesheet" href="style/reset.css">
+    <link rel="stylesheet" href="style/style_index.css">
+
 </head>
 <body>
+    <div class="main-container">
+        <div class="header">
+            <a href="index.htm" ><img src="images/logo_index.png" alt="logo smart financy" width="220px"></a>
+            <ul>
+                <button>Connexion</button>
+                <button>Inscription</button>
+            </ul>
+        </div>
+        <div class="bandeau_noir">
+            <p></p>
+        </div>
+    </div>
+    
     
 </body>
 </html>
