--- a/index.htm
+++ b/index.htm
@@ -19,7 +19,10 @@
             </ul>
         </div>
         <div class="bandeau_noir">
-            <p></p>
+            
+        </div>
+        <div class="second-container">
+
         </div>
     </div>
     
