--- a/page_inscription.html
+++ b/page_inscription.html
@@ -29,7 +29,7 @@
     <div class="block_inscription">
         <h3 style="color: black; position:relative; margin-left:50px">Inscription</h3>
 
-        <form action="caca.php" method="post" id="myForm">
+        <form action="rien" method="post" id="myForm">
             <label for="name">Nom :</label><br><br>
             <input type="text" id="name" name="name" class="case_formulaire" required><br>
             <label for="prenom">Prénom :</label><br><br>
