:art: update : noms des fichiers

--- a/page_liste_calculatrices.htm
+++ b/page_liste_calculatrices.htm
@@ -6,7 +6,7 @@
         <title>Smart Financy</title>
         <script src="script.js"></script>
         <link rel="stylesheet" href="style/reset.css">
-        <link rel="stylesheet" href="style/style_index.css">
+        <link rel="stylesheet" href="style/style_liste_calculatrices.css">
         <link rel="stylesheet" href="style/font.css">
 
     </head>
