nettoyage des conflits

--- a/page_liste_calculatrices.htm
+++ b/page_liste_calculatrices.htm
@@ -66,8 +66,8 @@
 
 
                 <div class="connexion-inscrip">
-                    <a href="#" class="connexion">Connexion</a>
-                    <a href="#" class="inscription">S'inscrire</a>
+                    <a href="connexion Aby.html" class="connexion">Connexion</a>
+                    <a href="inscription aby.html" class="inscription">S'inscrire</a>
                 </div>
 
                 <div class="login-icon">
