--- a/test.html
+++ b/test.html
@@ -71,6 +71,8 @@
                 <div id="calculator_1">
                     <form id="calcForm">
                         <table>
+                            <p>Détails de votre investissement</p>
+                            <br><br>
                             <tr>
                                 <td class="info">
                                     <label for="apport1">Apport: </label>
