:fire: merge with flo

--- a/page_liste_calculatrices.htm
+++ b/page_liste_calculatrices.htm
@@ -140,7 +140,7 @@
 
                 <div class="center_cards">
                     <div class="calculator_cards">
-                        <a href="#">
+                        <a href="calculatrice_frais.html">
                             <div class="content">
                                 <h3 class="card_title">Frais</h3>
                             </div>
