--- a/calculatrice_frais.html
+++ b/calculatrice_frais.html
@@ -66,13 +66,11 @@
                 </div> -->
 
                 <div class="calc_infos">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis ut lacinia justo. In accumsan in elit nec blandit. Duis malesuada mauris est, eget porttitor lacus luctus ut. Nulla a nunc sit amet sapien pretium vulputate non sed mi. Pellentesque a ipsum metus. Etiam eleifend commodo quam in molestie. Phasellus mauris nibh, consequat at dui et, consequat aliquam augue. Mauris faucibus viverra erat quis pharetra. Morbi congue, dui at vestibulum fringilla, elit nisi venenatis nibh, eget euismod turpis quam nec velit. Donec elementum arcu vel nisi mollis posuere. Donec condimentum, dui ut efficitur malesuada, turpis dui blandit tellus, in suscipit metus orci quis metus. Morbi egestas interdum lacus in ultrices. Donec dolor dolor, porta eu viverra ac, fermentum id justo. Cras maximus dictum ultricies.</p>
+                    <p>Quel que soit le type d’investissement que vous achetez ou le conseil que vous recevez, on vous facturera des frais. Il existe de nombreux types de frais et de manières de vous les facturer. Utilisez cette calculatrice pour estimer l’effet de ces frais sur vos investissements au fil du temps.</p>
                 </div>
                 <div id="calculator_1">
                     <form id="calcForm">
                         <table>
-                            <p>Détails de votre investissement</p>
-                            <br><br>
                             <tr>
                                 <td class="info">
                                     <label for="apport1">Apport: </label>
@@ -86,7 +84,7 @@
                                     <label for="taux_rendement">Taux de rendement annuel prévu : </label>
                                 </td>
                                 <td>
-                                    <input type="number" id="taux_rendement" name="taux_rendement" placeholder="Taux %" min="0.01" max="100">
+                                    <input type="number" id="taux_rendement" name="taux_rendement" placeholder="Taux %" min="0.00" max="100">
                                 </td>
                             </tr>
                             <tr>
@@ -94,7 +92,7 @@
                                     <label for="frais_annuel">Frais annuel : </label>
                                 </td>
                                 <td>
-                                    <input type="number" id="frais_annuel" name="frais_annuel" placeholder="Taux %" min="0.01" max="100">
+                                    <input type="number" id="frais_annuel" name="frais_annuel" placeholder="Taux %" min="0.00" max="100">
                                 </td>
                             </tr>
                             <tr>
@@ -123,7 +121,7 @@
                     function calculerFrais() {
                         // Récupérer les valeurs des champs
                         var apport = parseFloat(document.getElementById('apport1').value);
-                        var tauxRendement = parseFloat(document.getElementById('taux_rendement').value);
+                        var tauxRendement = parseInt(document.getElementById('taux_rendement').value);
                         var fraisAnnuel = parseFloat(document.getElementById('frais_annuel').value);
                         var années = parseInt(document.getElementById('année1').value);
             
