:fire: derniere version

--- a/calculatrice_frais.html
+++ b/calculatrice_frais.html
@@ -7,6 +7,7 @@
         <script src="script.js"></script>
         <link rel="stylesheet" href="style/reset.css">
         <link rel="stylesheet" href="style/style_index.css">
+        <link rel="stylesheet" href="style/font.css">
         <link rel="stylesheet" href="style/test.css">
 
     </head>
@@ -152,33 +153,33 @@
             <div>
                 <h3>A propos</h3>
                 <ul>
-                    <li><a href="https://www.airbnb.fr/help/home?from=footer">Centre d'aide</a></li>
-                    <li><a href="https://www.airbnb.fr/against-discrimination">Lutte contre la discrimination</a></li>
-                    <li><a href="https://www.airbnb.fr/accessibility">Assistance handicap</a></li>
-                    <li><a href="https://www.airbnb.fr/accessibility">Option d'annulation</a></li>
+                    <li><a href="">Centre d'aide</a></li>
+                    <li><a href="">Lutte contre la discrimination</a></li>
+                    <li><a href="">Assistance handicap</a></li>
+                    <li><a href="">Option d'annulation</a></li>
                 </ul>
             </div>
 
             <div>
                 <h3>Pages</h3>
                 <ul>
-                    <li><a href="https://www.airbnb.fr/help/home?from=footer">Page 1</a></li>
-                    <li><a href="https://www.airbnb.fr/aircover">Page 2</a></li>
-                    <li><a href="https://www.airbnb.fr/against-discrimination">Page 3</a></li>
-                    <li><a href="https://www.airbnb.fr/accessibility">Page 4</a></li>
-                    <li><a href="https://www.airbnb.fr/accessibility">Page 5</a></li>
+                    <li><a href="">Page 1</a></li>
+                    <li><a href="">Page 2</a></li>
+                    <li><a href="">Page 3</a></li>
+                    <li><a href="">Page 4</a></li>
+                    <li><a href="">Page 5</a></li>
                 </ul>
             </div>
 
             <div>
                 <h3>Ressources</h3>
                 <ul>
-                    <li><a href="https://www.airbnb.fr/help/home?from=footer">Newsroom</a></li>
-                    <li><a href="https://www.airbnb.fr/aircover">Nouvelles fonctionnalités</a></li>
-                    <li><a href="https://www.airbnb.fr/against-discrimination">Carrières</a></li>
-                    <li><a href="https://www.airbnb.fr/accessibility">Investisseurs</a></li>
-                    <li><a href="https://www.airbnb.fr/accessibility">Cartes cadeaux</a></li>
-                    <li><a href="https://www.airbnb.fr/accessibility">J'ai un problème</a></li>
+                    <li><a href="">Newsroom</a></li>
+                    <li><a href="">Nouvelles fonctionnalités</a></li>
+                    <li><a href="">Carrières</a></li>
+                    <li><a href="">Investisseurs</a></li>
+                    <li><a href="">Cartes cadeaux</a></li>
+                    <li><a href="">J'ai un problème</a></li>
                 </ul>
             </div>
         </section>
@@ -186,11 +187,11 @@
             <div class="flex2">
                 <p>© 2024 Smart Financy,Inc</p>
                 <ul>
-                    <li><a href="https://www.airbnb.fr/terms/privacy_policy">Confidentialité</a></li>
-                    <li><a href="https://www.airbnb.fr/terms">Conditions générales</a></li>
-                    <li><a href="https://www.airbnb.fr/terms">Plan du site</a></li>
-                    <li><a href="https://www.airbnb.fr/terms">Fonctionnement du site</a></li>
-                    <li><a href="https://www.airbnb.fr/terms">Infos surs l'entreprise</a></li>
+                    <li><a href="">Confidentialité</a></li>
+                    <li><a href="">Conditions générales</a></li>
+                    <li><a href="">Plan du site</a></li>
+                    <li><a href="">Fonctionnement du site</a></li>
+                    <li><a href="">Infos surs l'entreprise</a></li>
                 </ul>
             
             
